<resources>
  <string name="app_name_full" translatable="false">Pocket Movie Database</string>
  <string name="developed_by">Developed by</string>
  <string name="app_developer_name">Mostafa Tabasi</string>
  <string name="developer_mail" translatable="false">dev.mostafatabasi@gmail.com</string>
  <string name="developer_linkedin" translatable="false">https://www.linkedin.com/in/mostafa-tabasi/</string>

  <!--play store-->
  <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
  <string name="app_market_link">"market://details?id="</string>

  <!--navigation screen labels-->
  <string name="home_label" translatable="false">Home</string>
  <string name="archive_label" translatable="false">Archive</string>
  <string name="settings_label" translatable="false">Settings</string>
  <string name="add_movie_label" translatable="false">Add Movie Dialog</string>
  <string name="search_in_archive_label" translatable="false">Search in Archive Dialog</string>
  <string name="archive_item_info_label" translatable="false">Archive Item Info Dialog</string>
  <string name="about_label" translatable="false">About Dialog</string>

  <!--preference keys-->
  <string name="key_current_user_id" translatable="false">key_current_user_id</string>
  <string name="key_access_token" translatable="false">key_access_token</string>
  <string name="key_theme_system_default" translatable="false">key_theme_system_default</string>
  <string name="key_theme_method" translatable="false">key_theme_method</string>
  <string name="key_recently_added_movies" translatable="false">key_recently_added_movies</string>
  <string name="key_recently_added_series" translatable="false">key_recently_added_series</string>
  <string name="key_top_rated" translatable="false">key_top_rated</string>
  <string name="key_top_rated_method" translatable="false">key_top_rated_method</string>
  <string name="key_recently_watched" translatable="false">key_recently_watched</string>
  <string name="key_display_type" translatable="false">key_display_type</string>
  <string name="key_archive_default_item_rate" translatable="false">key_archive_default_item_rate</string>

  <!--content description-->
  <string name="app_logo" translatable="false">App Logo</string>
  <string name="linkedin_button" translatable="false">Linkedin Button</string>
  <string name="email_button" translatable="false">Email Button</string>
  <string name="title_clear_button" translatable="false">Title Clear Button</string>
  <string name="year_clear_button" translatable="false">Year Clear Button</string>
  <string name="director_clear_button" translatable="false">Director Clear Button</string>
  <string name="add_movie_button" translatable="false">Add Movie Button</string>
  <string name="poster" translatable="false">Poster</string>
  <string name="tv_icon" translatable="false">TV Icon</string>
  <string name="cancel_button" translatable="false">Cancel Button</string>
  <string name="search_button" translatable="false">Search Button</string>
  <string name="back_button" translatable="false">Back Button</string>
  <string name="_10" translatable="false">/10</string>
  <string name="_100" translatable="false">/100</string>
  <string name="tv_button" translatable="false">TV Button</string>
  <string name="seen_button" translatable="false">Seen Button</string>
  <string name="favorite_button" translatable="false">Favorite Button</string>
  <string name="clear_button" translatable="false">Clear Button</string>
  <string name="delete_button" translatable="false">Delete Button</string>
  <string name="confirm_clear_button" translatable="false">Confirm Clear Button</string>
  <string name="save_button" translatable="false">Save Button</string>
  <string name="edit_button" translatable="false">Edit Button</string>
  <string name="confirm_overwrite_button" translatable="false">Confirm Overwrite Button</string>
  <string name="confirm_button" translatable="false">Confirm Button</string>
  <string name="imdb_logo" translatable="false">IMDb Logo</string>
  <string name="imdb_page" translatable="false">IMDb Page</string>
  <string name="rotten_tomatoes_logo" translatable="false">Rotten Tomatoes Logo</string>
  <string name="metacritic_logo" translatable="false">Metacritic Logo</string>
  <string name="favorite_icon" translatable="false">Favorite Icon</string>
  <string name="seen_icon" translatable="false">Seen Icon</string>
  <string name="title_icon" translatable="false">Title Icon</string>
  <string name="open_a_blank_form" translatable="false">Open a blank form</string>
  <string name="open_movie_full_info" translatable="false">Open movie full info</string>

  <!--strings-->
  <string name="mail_subject">Feedback to PMDb</string>
  <string name="mail_chooser_title">Send feedback…</string>
  <string name="mail_app_not_found">Sorry…You don\'t have any mail app</string>
  <string name="version">Version</string>

  <string name="display_type">Display Type</string>
  <string name="tile">Tile</string>
  <string name="list">List</string>
  <string name="filter">Filter</string>
  <string name="both">Both</string>
  <string name="movies">Movies</string>
  <string name="tv_series">TV Series</string>
  <string name="search">Search</string>
  <string name="movie_title">Movie Title</string>
  <string name="year">Year</string>
  <string name="from">From</string>
  <string name="to">To</string>
  <string name="director">Director</string>
  <string name="director_name">Director Name</string>
  <string name="clear">Clear</string>
  <string name="apply">Apply</string>
  <string name="change_filter_settings">Change filter settings</string>
  <string name="or">or</string>
  <string name="add_your_first_movie">Add your first movie</string>
  <string name="there_is_nothing_to_show">There is nothing to show :(</string>
  <string name="recently_added_movies">Recently Added Movies</string>
  <string name="recently_added_tv_series">Recently Added TV Series</string>
  <string name="top_rated">Top Rated</string>
  <string name="recently_watched">Recently Watched</string>
  <string name="change_settings">Change settings</string>
  <string name="search_your_movie_or_swipe_up_for_a_blank_form">Search your movie or swipe up for a blank form</string>
  <string name="title">Title</string>
  <string name="imdb_id">IMDb ID</string>
  <string name="select_your_movie">Select your movie</string>
  <string name="min">min</string>
  <string name="country">Country</string>
  <string name="genre">Genre</string>
  <string name="enter_movie_genres">Enter movie genres</string>
  <string name="imdb">IMDb</string>
  <string name="rotten_tomatoes">Rotten Tomatoes</string>
  <string name="metacritic">Metacritic</string>
  <string name="rate">Rate</string>
  <string name="votes">Votes</string>
  <string name="awards">Awards</string>
  <string name="enter_movie_awards">Enter movie awards</string>
  <string name="name">Name</string>
  <string name="writer">Writer</string>
  <string name="actors">Actors</string>
  <string name="names">Names</string>
  <string name="plot">Plot</string>
  <string name="enter_movie_plot">Enter movie plot</string>
  <string name="comment">Comment</string>
  <string name="write_your_comment">Write your comment</string>
  <string name="swipe_up_to_view_all_information_or_edit">Swipe up to view all information or edit</string>
  <string name="title_cant_be_empty">Title can\'t be empty</string>
  <string name="enter_movie_title_id">Enter movie title or ID</string>
  <string name="check_internet_connection">Check internet connection</string>
  <string name="movie_not_found">Movie not found</string>
  <string name="something_wrong_try_again">Something wrong! try again</string>
  <string name="item_has_problem_try_again">Item has problem right now, try again later</string>
  <string name="clear_question">Clear?</string>
  <string name="delete_question">Delete?</string>
  <string name="already_archived_overwrite">Already archived, overwrite?</string>
  <string name="google_sync">Google Sync</string>
  <string name="logout">Logout</string>
  <string name="login">Login</string>
  <string name="login_description">Login with your Google account to sync your archive with it</string>
  <string name="logged_in_description">Your archive will be synced with %s</string>
  <string name="network_connection_error">Something is wrong with your network connection!</string>
  <string name="network_connection_error_full">Something is wrong with your network connection!\nYou can\'t add, remove or edit any of the movies for now\nCheck the connection and tap to try again</string>
</resources>