<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/main_nav_graph"
  app:startDestination="@id/homeFragment">

  <fragment
    android:id="@+id/homeFragment"
    android:name="com.mstf.pmdb.ui.main.home.HomeFragment"
    android:label="@string/home_label"
    tools:layout="@layout/fragment_home">

    <action
      android:id="@+id/action_homeFragment_to_addMovieDialog"
      app:destination="@+id/addMovieDialog"
      app:launchSingleTop="true" />

    <action
      android:id="@+id/action_homeFragment_to_archiveItemSummaryDialog"
      app:destination="@+id/ArchiveItemSummaryDialog" />
  </fragment>

  <dialog
    android:id="@+id/addMovieDialog"
    android:name="com.mstf.pmdb.ui.main.home.add_movie_dialog.AddMovieDialog"
    android:label="@string/add_movie_label"
    tools:layout="@layout/dialog_add_movie" />

  <fragment
    android:id="@+id/archiveFragment"
    android:name="com.mstf.pmdb.ui.main.archive.ArchiveFragment"
    android:label="@string/archive_label"
    tools:layout="@layout/fragment_archive">

    <action
      android:id="@+id/action_archiveFragment_to_addMovieDialog"
      app:destination="@+id/addMovieDialog"
      app:launchSingleTop="true" />

    <action
      android:id="@+id/action_archiveFragment_to_searchDialog"
      app:destination="@+id/searchInArchiveDialog" />

    <action
      android:id="@+id/action_archiveFragment_to_archiveItemSummaryDialog"
      app:destination="@+id/ArchiveItemSummaryDialog" />

  </fragment>

  <dialog
    android:id="@+id/searchInArchiveDialog"
    android:name="com.mstf.pmdb.ui.main.archive.search_in_archive_dialog.SearchInArchiveDialog"
    android:label="@string/search_in_archive_label"
    tools:layout="@layout/dialog_search_in_archive">

    <argument
      android:name="display_type"
      android:defaultValue="-1"
      app:argType="integer" />

    <argument
      android:name="filter_type"
      android:defaultValue="-1"
      app:argType="integer" />

    <argument
      android:name="title"
      app:argType="string"
      app:nullable="true" />

    <argument
      android:name="from_year"
      android:defaultValue="-1"
      app:argType="integer" />

    <argument
      android:name="to_year"
      android:defaultValue="-1"
      app:argType="integer" />

    <argument
      android:name="director"
      app:argType="string"
      app:nullable="true" />

  </dialog>

  <dialog
    android:id="@+id/ArchiveItemSummaryDialog"
    android:name="com.mstf.pmdb.ui.main.archive.archive_item_info_dialog.ArchiveItemInfoDialog"
    android:label="@string/archive_item_info_label"
    tools:layout="@layout/dialog_archive_item_info">

    <argument
      android:name="archive_item_id"
      android:defaultValue="-1L"
      app:argType="long" />

  </dialog>

  <fragment
    android:id="@+id/settingsFragment"
    android:name="com.mstf.pmdb.ui.main.settings.SettingsFragment"
    android:label="@string/settings_label"
    tools:layout="@layout/fragment_settings">

    <action
      android:id="@+id/action_settingsFragment_to_aboutDialog"
      app:destination="@+id/aboutDialog" />

  </fragment>

  <dialog
    android:id="@+id/aboutDialog"
    android:name="com.mstf.pmdb.ui.main.settings.about_dialog.AboutDialog"
    android:label="@string/about_label"
    tools:layout="@layout/dialog_about" />

</navigation>