<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <variable
      name="viewModel"
      type="com.pmdb.android.ui.main.settings.about_dialog.AboutViewModel" />

  </data>

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/_6sdp"
    android:paddingTop="@dimen/space_large"
    android:paddingBottom="@dimen/space_xxx_large">

    <ImageView
      android:id="@+id/app_icon"
      android:layout_width="@dimen/_90sdp"
      android:layout_height="@dimen/_110sdp"
      android:scaleType="centerCrop"
      android:src="@drawable/ic_foreground"
      android:contentDescription="@string/app_logo" />

    <View
      android:id="@+id/divider"
      android:layout_width="@dimen/_1sdp"
      android:layout_alignTop="@+id/app_icon"
      android:layout_alignBottom="@+id/app_icon"
      android:layout_height="wrap_content"
      android:layout_marginRight="@dimen/_6sdp"
      android:layout_toRightOf="@id/app_icon"
      android:background="?colorOnPrimary" />

    <TextView
      android:id="@+id/app_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_marginTop="@dimen/_6sdp"
      android:layout_toRightOf="@id/divider"
      android:fontFamily="sans-serif"
      android:text="@string/app_name"
      android:textColor="@color/black"
      android:textSize="@dimen/_13ssp"
      android:textStyle="bold" />

    <TextView
      android:id="@+id/app_full_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBaseline="@+id/app_name"
      android:layout_marginLeft="@dimen/_6sdp"
      android:layout_toRightOf="@id/app_name"
      android:fontFamily="sans-serif-light"
      android:text="@{`(`+ @string/app_name_full +`)`}"
      android:textColor="@color/grey_700"
      android:textSize="@dimen/_10ssp"
      tools:text="(Pocket Movie Database)" />

    <TextView
      android:id="@+id/developed_by"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/app_name"
      android:layout_marginTop="@dimen/_6sdp"
      android:layout_toRightOf="@id/divider"
      android:fontFamily="sans-serif-light"
      android:text="@string/developed_by"
      android:textColor="@color/grey_700"
      android:textSize="@dimen/_10ssp" />

    <TextView
      android:id="@+id/me"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBaseline="@id/developed_by"
      android:layout_marginLeft="@dimen/_6sdp"
      android:layout_toRightOf="@id/developed_by"
      android:fontFamily="sans-serif"
      android:text="@string/app_developer_name"
      android:textColor="@color/black"
      android:textSize="@dimen/_11ssp"
      android:textStyle="bold" />

    <TextView
      android:id="@+id/version_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/developed_by"
      android:layout_marginTop="@dimen/_6sdp"
      android:layout_toRightOf="@id/divider"
      android:fontFamily="sans-serif-light"
      android:text="@string/version"
      android:textColor="@color/grey_700"
      android:textSize="@dimen/_10ssp" />

    <TextView
      android:id="@+id/version_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBaseline="@id/version_title"
      android:layout_marginLeft="@dimen/_6sdp"
      android:layout_toRightOf="@id/version_title"
      android:fontFamily="sans-serif"
      android:text="@{viewModel.version}"
      android:textColor="@color/black"
      android:textSize="@dimen/_11ssp"
      android:textStyle="bold"
      tools:text="1.0" />

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@id/divider"
      android:layout_marginTop="@dimen/_6sdp"
      android:layout_toRightOf="@id/divider"
      android:orientation="horizontal">

      <ImageView
        android:id="@+id/linkedin"
        android:layout_width="@dimen/_23sdp"
        android:layout_height="@dimen/_23sdp"
        android:layout_marginRight="@dimen/_3sdp"
        android:background="?actionBarItemBackground"
        android:clickable="true"
        android:padding="@dimen/_3sdp"
        android:src="@drawable/ic_linkedin"
        app:tint="@color/grey_500"
        android:contentDescription="@string/linkedin_button"
        android:focusable="true" />

      <ImageView
        android:id="@+id/email"
        android:layout_width="@dimen/_23sdp"
        android:layout_height="@dimen/_23sdp"
        android:layout_marginRight="@dimen/_3sdp"
        android:background="?actionBarItemBackground"
        android:clickable="true"
        android:padding="@dimen/_3sdp"
        android:src="@drawable/ic_email"
        android:contentDescription="@string/email_button"
        app:tint="@color/grey_500"
        android:focusable="true" />

    </LinearLayout>

  </RelativeLayout>

</layout>