<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <variable
      name="viewModel"
      type="com.pmdb.android.ui.main.archive.ArchiveViewModel" />

    <import type="android.view.View" />

    <import type="com.pmdb.android.R" />

    <import type="com.pmdb.android.utils.AppConstants" />

  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".ui.main.archive.ArchiveFragment">

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/movies"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:background="?colorBackgroundArchive"
      android:paddingBottom="?actionBarSize"
      android:scrollbars="vertical"
      android:visibility="@{viewModel.movies == null || viewModel.movies.size() == 0 ? View.GONE : View.VISIBLE, default=gone}"
      app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:listitem="@layout/item_archive_grid_horizontal" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:gravity="center"
      android:orientation="vertical"
      android:visibility="@{viewModel.movies == null || viewModel.movies.size() == 0 ? View.VISIBLE : View.GONE, default=visible}"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/there_is_nothing_to_show"
        android:textColor="@color/black"
        android:textSize="@dimen/font_xx_large" />

      <TextView
        android:id="@+id/add_first_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_add"
        android:drawablePadding="8dp"
        android:padding="8dp"
        android:text="@string/add_your_first_movie"
        android:textColor="@color/black"
        android:textSize="@dimen/font_xx_large" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="@dimen/font_xx_large" />

      <TextView
        android:id="@+id/change_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_search"
        android:drawablePadding="8dp"
        android:padding="8dp"
        android:text="@string/change_filter_settings"
        android:textColor="@color/black"
        android:textSize="@dimen/font_xx_large" />

    </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
