<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <variable
      name="viewModel"
      type="com.pmdb.android.ui.main.home.HomeViewModel" />

    <import type="android.view.View" />

  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
      android:id="@+id/scroll_root"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="?colorBackgroundArchive"
      android:scrollbars="none">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_6sdp"
        android:orientation="vertical">

        <LinearLayout
          android:id="@+id/recently_added_movies_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:visibility="@{viewModel.isRecentMoviesEnable &amp;&amp; viewModel.recentlyAddedMovies != null &amp;&amp; viewModel.recentlyAddedMovies.size > 0 ? View.VISIBLE : View.GONE, default= gone}"
          tools:visibility="visible">

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/recently_added_movies"
            android:textColor="@color/grey_500"
            android:textSize="@dimen/_14ssp" />

          <View
            android:layout_width="0dp"
            android:layout_height="@dimen/_1sdp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="@dimen/_4sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:layout_weight="1"
            android:background="@color/grey_400" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/recently_added_movies"
          android:layout_width="match_parent"
          android:layout_height="@dimen/_155sdp"
          android:layout_marginBottom="@dimen/_16sdp"
          android:orientation="horizontal"
          android:visibility="@{viewModel.isRecentMoviesEnable &amp;&amp; viewModel.recentlyAddedMovies != null &amp;&amp; viewModel.recentlyAddedMovies.size > 0 ? View.VISIBLE : View.GONE, default= gone}"
          app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
          tools:listitem="@layout/item_archive_grid_horizontal"
          tools:visibility="visible" />

        <LinearLayout
          android:id="@+id/recently_added_series_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:visibility="@{viewModel.isRecentSeriesEnable &amp;&amp; viewModel.recentlyAddedSeries != null &amp;&amp; viewModel.recentlyAddedSeries.size > 0 ? View.VISIBLE : View.GONE, default= gone}"
          tools:visibility="visible">

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/recently_added_tv_series"
            android:textColor="@color/grey_500"
            android:textSize="@dimen/_14ssp" />

          <View
            android:layout_width="0dp"
            android:layout_height="@dimen/_1sdp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="@dimen/_4sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:layout_weight="1"
            android:background="@color/grey_400" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/recently_added_series"
          android:layout_width="match_parent"
          android:layout_height="@dimen/_155sdp"
          android:layout_marginBottom="@dimen/_16sdp"
          android:orientation="horizontal"
          android:visibility="@{viewModel.isRecentSeriesEnable &amp;&amp; viewModel.recentlyAddedSeries != null &amp;&amp; viewModel.recentlyAddedSeries.size > 0 ? View.VISIBLE : View.GONE, default= gone}"
          app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
          tools:listitem="@layout/item_archive_grid_horizontal"
          tools:visibility="visible" />

        <LinearLayout
          android:id="@+id/top_rated_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:visibility="@{viewModel.isTopRatedEnable &amp;&amp; viewModel.topRated != null &amp;&amp; viewModel.topRated.size > 0 ? View.VISIBLE : View.GONE, default= gone}"
          tools:visibility="visible">

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/top_rated"
            android:textColor="@color/grey_500"
            android:textSize="@dimen/_14ssp" />

          <View
            android:layout_width="0dp"
            android:layout_height="@dimen/_1sdp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="@dimen/_4sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:layout_weight="1"
            android:background="@color/grey_400" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/top_rated"
          android:layout_width="match_parent"
          android:layout_height="@dimen/_155sdp"
          android:layout_marginBottom="@dimen/_16sdp"
          android:orientation="horizontal"
          android:visibility="@{viewModel.isTopRatedEnable &amp;&amp; viewModel.topRated != null &amp;&amp; viewModel.topRated.size > 0 ? View.VISIBLE : View.GONE, default= gone}"
          app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
          tools:listitem="@layout/item_archive_grid_horizontal"
          tools:visibility="visible" />

        <LinearLayout
          android:id="@+id/recently_watched_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:visibility="@{viewModel.isRecentlyWatchedEnable &amp;&amp; viewModel.recentlyWatched != null &amp;&amp; viewModel.recentlyWatched.size > 0 ? View.VISIBLE : View.GONE, default= gone}"
          tools:visibility="visible">

          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/recently_watched"
            android:textColor="@color/grey_500"
            android:textSize="@dimen/_14ssp" />

          <View
            android:layout_width="0dp"
            android:layout_height="@dimen/_1sdp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="@dimen/_4sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:layout_weight="1"
            android:background="@color/grey_400" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/recently_watched"
          android:layout_width="match_parent"
          android:layout_height="@dimen/_155sdp"
          android:layout_marginBottom="@dimen/_16sdp"
          android:orientation="horizontal"
          android:visibility="@{viewModel.isRecentlyWatchedEnable &amp;&amp; viewModel.recentlyWatched != null &amp;&amp; viewModel.recentlyWatched.size > 0 ? View.VISIBLE : View.GONE, default= gone}"
          app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
          tools:listitem="@layout/item_archive_grid_horizontal"
          tools:visibility="visible" />

      </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:gravity="center"
      android:orientation="vertical"
      android:visibility="@{((viewModel.recentlyAddedMovies == null || viewModel.recentlyAddedMovies.size() == 0) &amp;&amp; (viewModel.recentlyAddedSeries == null || viewModel.recentlyAddedSeries.size() == 0)  &amp;&amp; (viewModel.topRated == null || viewModel.topRated.size() == 0)  &amp;&amp; (viewModel.recentlyWatched == null || viewModel.recentlyWatched.size() == 0)) || (!viewModel.isRecentMoviesEnable &amp;&amp; !viewModel.isRecentSeriesEnable &amp;&amp; !viewModel.isTopRatedEnable &amp;&amp; !viewModel.isRecentlyWatchedEnable) ? View.VISIBLE : View.GONE, default=gone}"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/there_is_nothing_to_show"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp" />

      <TextView
        android:id="@+id/add_first_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6sdp"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:drawablePadding="@dimen/_6sdp"
        android:focusable="true"
        android:padding="@dimen/_6sdp"
        android:text="@string/add_your_first_movie"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        app:drawableLeftCompat="@drawable/ic_add" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp" />

      <TextView
        android:id="@+id/change_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6sdp"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:drawablePadding="@dimen/_6sdp"
        android:focusable="true"
        android:padding="@dimen/_6sdp"
        android:text="@string/change_settings"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        app:drawableLeftCompat="@drawable/ic_settings_outline" />

    </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
